Increase composer line height to avoid cutting off emoji (#8583)

--- a/res/css/views/rooms/_SendMessageComposer.scss
+++ b/res/css/views/rooms/_SendMessageComposer.scss
@@ -20,7 +20,7 @@ limitations under the License.
     flex-direction: column;
     font-size: $font-14px;
     // fixed line height to prevent emoji from being taller than text
-    line-height: calc(1.2 * $font-14px);
+    line-height: $font-18px;
     justify-content: center;
     margin-right: 6px;
     // don't grow wider than available space
